        Reviewed by Nikolas.

https://bugs.webkit.org/show_bug.cgi?id=16447
        onload called too many times for <svg:image>
        https://bugs.webkit.org/show_bug.cgi?id=12282
        SVG wastes time in malloc to send loadEvents to non-existent listeners

        Postpone load event dispatching for image when externalResourcesRequired        is true, delaying parents but not siblings, and make sure the load event        is sent once for image in all cases.



Canonical link: https://commits.webkit.org/26005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32738 268f45cc-cd09-0410-ab3c-d52691b4dbfc